# improver

./: .cache_langchain.db  .gitignore  Import necessary libraries  README.md  benchmark_financial.ipynb  benchmark_financial_2.ipynb  dev3.ipynb  dev4_healthcare.ipynb  dev5_all_datasets.ipynb  dev5_eligibility.ipynb  dev5_financial.ipynb  dev5_healthcare.ipynb  dev5_nasa.ipynb  dev5_nasa2.ipynb  fast_graph_metrics.yaml  generate_dataset.ipynb  improved_old_metrics.yaml  improver.drawio  initial_code_eligibility.yaml  initial_code_financial.yaml  initial_code_healthcare.yaml  initial_code_nasa-FD002.yaml  initial_code_nasa.yaml  initial_metrics_eligibility.yaml  initial_metrics_financial.yaml  initial_metrics_healthcare.yaml  initial_metrics_nasa-FD002.yaml  initial_metrics_nasa.yaml  large_graph_metrics.yaml  metrics_plan_execute.yaml  metrics_react.yaml  metrics_reflection.json  metrics_reflection.pkl  metrics_reflection.yaml  metrics_self_discovery.yaml  metrics_tot.yaml  nasa_turbofan_dataset.ipynb  new_model_metrics.yaml  old_ensemble_metrics.yaml  old_metrics.yaml  (+15 more)
archive/: baseline_temp_0.9_max_iter_1_llm_llama-3.1-8b-instruct_dataset_healthcare_7a2b3427.yaml  dev1.ipynb  dev2.ipynb  dev4_financial.ipynb  dev4_healthcare.ipynb
caia/: improver.py  insight.py  memory.py  prompts.py  representation.py  slow_graph_backup.py  tools.py  utils.py
coding/: fibonacci.py
data/: human_evaluation.yaml  llm_evals_gemini3pro.yaml  llm_evals_gpt5-2.yaml  llm_evals_opus4-5.yaml  metrics_react.yaml  summary_metrics_eligibility.yaml  summary_metrics_financial.yaml
docker/: Dockerfile
docs/: architecture.md  codebase.md  experiments.md  results.md
experiments/: dev5_eligibility.ipynb  dev5_financial.ipynb  dev5_nasa2.ipynb  nasa_turbofan_dataset2.ipynb
imgs/: baseline_temp_0.5_max_iter_1_llm_llama-3.1-8b-instruct_dataset_financial.yaml  dev4_eligibility.ipynb
paper_figures-eligibility/: aggregated_results.csv  detailed_results.csv
paper_figures-financial/: aggregated_results.csv  detailed_results.csv
paper_figures-healthcare/: aggregated_results.csv  detailed_results.csv
paper_figures-nasa/: aggregated_results.csv  detailed_results.csv
paper_figures-nasa-FD002/: aggregated_results.csv  detailed_results.csv
(+160 files in other folders)
