[project]
name = "caia"
version = "0.1.0"
requires-python = ">=3.8,<3.9"
description = "KC-Agent: A Dual-Process Cognitive Architecture for ML Model Improvement"

[project.dependencies]
# LangChain ecosystem (pinned for reproducibility)
pydantic = "==1.10.15"
langchain = "==0.2.2"
langchain-core = "==0.2.2"
langchain-community = "==0.2.2"
langchain-openai = ">=0.1.0"
langchain-groq = "==0.1.6"
langgraph = "==0.0.60"

# Agent execution
pyautogen = ">=0.2.0,<0.3"
docarray = "==0.40.0"

# Data / ML
numpy = ">=1.24"
pandas = ">=2.0"
scikit-learn = ">=1.3"
scipy = ">=1.10"
shap = ">=0.44"
evidently = ">=0.4"
alibi = ">=0.9"

# Visualization / notebook
matplotlib = "==3.8.3"
seaborn = ">=0.13"
ipywidgets = "==8.1.2"
jupyter = ">=1.0"
ipykernel = ">=6.0"

# Utilities
rich = "*"
grandalf = "==0.8"
pyyaml = ">=6.0"
streamlit = "==1.27.0"
streamlit-option-menu = "==0.3.13"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caia"]
