[project]
name = "caia"
version = "0.1.0"
requires-python = ">=3.11"
description = "KC-Agent: A Dual-Process Cognitive Architecture for ML Model Improvement"
dependencies = [
    # LangChain ecosystem (pinned for reproducibility)
    "pydantic==1.10.15",
    "langchain==0.2.2",
    "langchain-core==0.2.2",
    "langchain-community==0.2.2",
    "langchain-openai>=0.1.0",
    "langchain-groq==0.1.6",
    "langgraph==0.0.60",
    # Agent execution
    "pyautogen>=0.2.0,<0.3",
    "docarray==0.40.0",
    # Data / ML
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "evidently>=0.4",
    "alibi>=0.9",
    "shap>=0.44",
    # Visualization / notebook
    "matplotlib==3.8.3",
    "ipython>=8.0",
    # Analysis (used in results.ipynb)
    "scipy>=1.10",
    "seaborn>=0.13",
    "ipywidgets==8.1.2",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    # Utilities
    "rich",
    "grandalf==0.8",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caia"]
